# StreamLinkerino

./: .gitignore  CMakeLists.txt  Makefile  README.md  appImagebuilder.sh  icon.qrc  streamlinkerino.pro
resource/: CMakeLists.txt  Streamlinkerino.Desktop
src/: MainWindow.cpp  MainWindow.h  Submodules.cpp  Submodules.h  debug.h  debugging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  streamlinkerino.pro  submodules.cpp  submodules.h  submodulesDialog.ui  type.cpp  type.h  windark.h  windows_interface.cpp  windows_interface.h
src/Forms/: settingsDialog.ui
src/chatterino/: chatterinojson.cpp  chatterinojson.h
src/os/: darkmode.cpp  darkmode.h  path.h  windowinterface.h
src/os/linux/: native.cpp  native.h  path.cpp
src/os/windows/: native.cpp  native.h  path.cpp  windark.cpp
src/widgets/: mainwindow.ui  submodulesDialog.ui
